# Universe

./: README.md  pyproject.toml
.github/workflows/: main.yml
.schemas/: institution.yaml  physic_index.yaml  realization_index.yaml
.scripts/: all.py  create_api.py  generate_graph.py  generate_jsonld.py  generate_schemas.py  sparql_endpoint.py  uri_server.py  validate.py
data_descriptors/activity/models/: activity.json  activity.py
data_descriptors/activity/terms/: aerchemmip.json  c4mip.json  cdrmip.json  cfmip.json  cmip.json  cordex.json  damip.json  dcpp.json  dynvarmip.json  fafmip.json  geomip.json  gmmip.json  highresmip.json  ismip6.json  lesfmip.json  ls3mip.json  lumip.json  omip.json  pamip.json  pmip.json  rfmip.json  scenariomip.json  simip.json  viacsab.json  volmip.json
data_descriptors/experiment/models/: experiment.json  experiment.py
data_descriptors/experiment/terms/: 1pctco2-4xext.json  1pctco2-bgc.json  1pctco2-cdr.json  1pctco2-rad.json  1pctco2.json  1pctco2ndep-bgc.json  1pctco2ndep.json  1pctco2to4x-withism.json  a4sst.json  a4sstice-4xco2.json  a4sstice.json  abrupt-0p5xco2.json  abrupt-2xco2.json  abrupt-4xco2.json  abrupt-solm4p.json  amip.json  (+317 more)
forcing_index/models/: forcing_index.json  forcing_index.py
graph/: es-vocab.ttl
initialization_index/models/: initialization_index.py
initialization_index/terms/: one_digit.json
institution/models/: institution.py
physic_index/models/: physic_index.py
realization_index/models/: realization_index.py
realization_index/terms/: run.json
variant_label/models/: variant_label.py
(+406 files in other folders)
